; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-qcom.c_msm_timer_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-qcom.c_msm_timer_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 (%struct.clock_event_device*)* }

@event_base = common dso_local global i64 0, align 8
@TIMER_ENABLE = common dso_local global i64 0, align 8
@TIMER_ENABLE_EN = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @msm_timer_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @msm_timer_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.clock_event_device*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.clock_event_device*
  store %struct.clock_event_device* %8, %struct.clock_event_device** %5, align 8
  %9 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %10 = call i64 @clockevent_state_oneshot(%struct.clock_event_device* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %26

12:                                               ; preds = %2
  %13 = load i64, i64* @event_base, align 8
  %14 = load i64, i64* @TIMER_ENABLE, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @readl_relaxed(i64 %15)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* @TIMER_ENABLE_EN, align 4
  %18 = xor i32 %17, -1
  %19 = load i32, i32* %6, align 4
  %20 = and i32 %19, %18
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i64, i64* @event_base, align 8
  %23 = load i64, i64* @TIMER_ENABLE, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @writel_relaxed(i32 %21, i64 %24)
  br label %26

26:                                               ; preds = %12, %2
  %27 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %28 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %27, i32 0, i32 0
  %29 = load i32 (%struct.clock_event_device*)*, i32 (%struct.clock_event_device*)** %28, align 8
  %30 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %31 = call i32 %29(%struct.clock_event_device* %30)
  %32 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %32
}

declare dso_local i64 @clockevent_state_oneshot(%struct.clock_event_device*) #1

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
